testsuite/tests/grammar/invalid_lexers/case_5.lkt
lexer foo_example {
    foo
    match p"foo" {
        if previous_token isa foo | bar then send(foo, 3)
        else send(foo, 3)
    }
}
